<resources>
    <string name="app_name">Easy Pay</string>
    <string name="login_label">Please login your account:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="title_activity_main">Easy Pay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="developer_name"><![CDATA[Tan Cheong Kiat & Tan Qi Han]]></string>
    <string name="view_voucher">View voucher</string>
    <string name="my_wallet">My wallet</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="prepaid_top_up">" Prepaid Top Up"</string>
    <string name="voucher">" Voucher"</string>
    <string name="scan_pay"><![CDATA[Scan & Pay]]></string>
    <string name="account_details">ACCOUNT DETAILS</string>
    <string name="settings_username">"Username\t\t\t\t: "</string>
    <string name="settings_name">"Full Name\t\t\t\t: "</string>
    <string name="settings_contact">"Contact No.\t\t\t: "</string>
    <string name="settings_email">"Email Address\t\t: "</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="reset_transaction_pin">Reset Transaction PIN</string>
    <string name="profile_details">PROFILE DETAILS</string>
    <string name="full_name">Full Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="email_address">Email Address</string>
    <string name="save">Save</string>
    <string name="welcome">"Welcome, "</string>
    <string name="wallet_balance">WALLET BALANCE</string>
    <string name="balance">"RM"</string>
    <string name="credit_debit_card">CREDIT/DEBIT CARD</string>
    <string name="top_up">Top Up</string>
    <string name="add_new_card">Add new card</string>
    <string name="card_details">CARD DETAILS</string>
    <string name="card_holder_name">Card holder name</string>
    <string name="card_number">Card number</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="charge_message">A one time charge and refund of RM2 is needed to verify your card.</string>
    <string name="history">History</string>
    <string name="registerstring">Register</string>
    <string name="massage">Please enter following details:</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="fullname">Full Name</string>
    <string name="phonenumber">Phone Number</string>
    <string name="email">Email Address</string>
    <string name="next">Next</string>
    <string name="registertitle">Registration Form</string>
    <string name="pinsetup">PIN Setup</string>
    <string name="message2">Transaction PIN</string>
    <string name="message3">Enter your 6-Digits PIN to confirm</string>
    <string name="message4">Transaction PIN Reset</string>
    <string name="message5">Enter your new 6-Digit transaction PIN</string>
    <string name="message6">Enter your password to change your PIN</string>
    <string name="textpin">Pin</string>
    <string name="btnconfirm">Confirm</string>
    <string name="message7">LOGIN DETAILS</string>
    <string name="OldPassword">Old Password</string>
    <string name="NewPassword">New Password</string>
    <string name="ConfirmNewPassword">Confirm New Password</string>
    <string name="btnsave">Save</string>

    <string name="insert_user_url">https://easy-app.000webhostapp.com/insert_user.php</string>
    <string name="update_user_pin">https://easy-app.000webhostapp.com/update_pin.php</string>
    <string name="update_user_password">https://easy-app.000webhostapp.com/update_password.php</string>
    <string name="get_user_url">http://easy-app.000webhostapp.com/select_user.php</string>
    <string name="update_profile_url">http://easy-app.000webhostapp.com/update_profile.php</string>
    <string name="get_card_url">http://easy-app.000webhostapp.com/select_card.php</string>
    <string name="delete_card.url">http://easy-app.000webhostapp.com/delete_card.php</string>
    <string name="insert_card_url">http://easy-app.000webhostapp.com/insert_card.php</string>
    <string name="get_balance_url">http://easy-app.000webhostapp.com/get_balance.php?username=</string>
    <string name="get_transaction_url">http://easy-app.000webhostapp.com/select_transaction.php</string>
    <string name="history_icon">Hisotry Icon</string>
    <string name="min_amount">Min. RM 10</string>
    <string name="top_up_amount">TOP UP AMOUNT</string>
    <string name="wallet_top_up">Wallet Top Up</string>
    <string name="insert_transaction_url">https://easy-app.000webhostapp.com/insert_transaction.php</string>
    <string name="update_balance_url">https://easy-app.000webhostapp.com/update_balance.php</string>
    <string name="get_top_up_stock_url">https://easy-app.000webhostapp.com/get_top_up_stock.php?telcoName=</string>
    <string name="update_top_up_stock_url">https://easy-app.000webhostapp.com/update_top_up_stock.php</string>
    <string name="get_store_url">https://easy-app.000webhostapp.com/select_store.php?storeName=</string>
    <string name="prepaid_reload_title">" Reload"</string>
    <string name="reload_message">Please select the reload amount</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="view_transaction_history">View Transaction History</string>
    <string name="paying_to">Paying To</string>
    <string name="store_name">7-eleven Convenience Store</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="purchase_message">Please select purchase amount :</string>
    <string name="message8">How to redeem?</string>


    <string-array name="reload_amount">
        <item>RM10</item>
        <item>RM30</item>
        <item>RM50</item>
    </string-array>
    <string-array name="purchase_amount">
        <item>RM10</item>
        <item>RM20</item>
        <item>RM50</item>
        <item>RM100</item>
    </string-array>
    <string name="select_voucher">https://easy-app.000webhostapp.com/select_voucher.php</string>
    <string name="select_voucherOrder">https://easy-app.000webhostapp.com/select_voucherorder.php</string>
    <string name="update_voucher_status">https://easy-app.000webhostapp.com/update_voucher_status.php</string>
    <string name="insert_voucherOrder">https://easy-app.000webhostapp.com/insert_voucher_order.php</string>
    <string name="steam_wallet_code">RM10 Steam Wallet Code</string>

</resources>
